# cross_platform_game_engine

./: .gitignore  Backend.cpp  Backend.h  BrowserBackend.cpp  BrowserBackend.h  CMakeLists.txt  Camera.cpp  Camera.hpp  DesktopBackend.cpp  DesktopBackend.h  Image.cpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.h  Shader.hpp  flake.nix  index.html  main.cpp  readme.md
assets/: shader.frag  shader.vert
platform/: GlfwWindow.cpp  GlfwWindow.hpp  Platform.hpp  Window.hpp
platform/browser/: PlatformBrowser.cpp  PlatformBrowser.hpp
platform/desktop/: PlatformDesktop.cpp  PlatformDesktop.hpp
